--- a/app/src/main/res/layout/update_profile_user.xml
+++ b/app/src/main/res/layout/update_profile_user.xml
@@ -234,7 +234,8 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/edittext_round"
                     android:gravity="center"
-                    android:hint="Current_password"
+                    android:inputType="textPassword"
+                    android:hint="Current password"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
                     android:textSize="15sp"
@@ -245,10 +246,11 @@
                     android:layout_marginTop="8dp"
                     android:id="@+id/npass"
                     android:layout_width="match_parent"
+                    android:inputType="textPassword"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_round"
                     android:gravity="center"
-                    android:hint="New_password"
+                    android:hint="New password"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
                     android:textSize="15sp"
@@ -262,7 +264,8 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/edittext_round"
                     android:gravity="center"
-                    android:hint="Rest_password"
+                    android:inputType="textPassword"
+                    android:hint="Rest password"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
