--- a/app/src/main/res/layout/dashcatogrey_list.xml
+++ b/app/src/main/res/layout/dashcatogrey_list.xml
@@ -77,7 +77,18 @@
 
                 </LinearLayout>
 
+                <ImageView
+                    android:id="@+id/deletcat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="13dp"
+                    android:layout_marginBottom="13dp"
+                    android:src="@drawable/ic_delete"
+                    >
 
+                </ImageView>
             </RelativeLayout>
 
 
