--- a/app/src/main/res/layout/products_list.xml
+++ b/app/src/main/res/layout/products_list.xml
@@ -149,7 +149,7 @@
                         </ImageView>
 
                         <ImageView
-                            android:id="@+id/Raitings"
+                            android:id="@+id/bt_add_to_cart"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="right|center"
