--- a/app/src/main/res/layout/userreports_ltem.xml
+++ b/app/src/main/res/layout/userreports_ltem.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
 
 
             <TextView
-                android:id="@+id/prouct_title"
+                android:id="@+id/titleProduct"
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:text="watches"
@@ -40,7 +40,7 @@
                 android:id="@+id/date"
                 android:layout_width="0dp"
                 android:layout_weight="2"
-                android:text="date"
+                android:text="78"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="15sp"
@@ -51,7 +51,7 @@
                 android:id="@+id/type"
                 android:layout_width="0dp"
                 android:layout_weight="2"
-                android:text="sell"
+                android:text="0"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="15sp"
@@ -63,16 +63,6 @@
 
 
     </androidx.cardview.widget.CardView>
-
-    <Button
-        android:id="@+id/pdf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="save pdf"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
